[package]
name = "pallet-eth-bridge-runtime-api"
description = "Runtime API for module"
license = "GPL-3.0"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
pallet-avn = { path = "../../avn", default-features = false }
sp-api = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.11.0" }
sp-avn-common =  { default-features = false, path = "../../../primitives/avn-common" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"pallet-avn/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"sp-avn-common/std",
	"sp-application-crypto/std",
]


