[package]
name = "pallet-eth-bridge-runtime-api"
description = "Runtime API for module"
license = "GPL-3.0"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
frame-support.workspace = true
pallet-avn.workspace = true
sp-api.workspace = true
sp-std.workspace = true
sp-core.workspace = true
sp-avn-common.workspace = true
sp-application-crypto.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"pallet-avn/std",
	"sp-api/std",
	"sp-std/std",
	"sp-core/std",
	"sp-avn-common/std",
	"sp-application-crypto/std",
]


